# Cuda-ErodeAndDilate

./: CMakeLists.txt  README.md
src/: kernel.cu  main.cpp
